--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "author": "Cyber Cloud",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "build": "mkdir dist && babel src -s -d dist"
   },
   "dependencies": {
     "@types/passport-google-oauth20": "^2.0.11",
