--- a/package.json
+++ b/package.json
@@ -4,12 +4,10 @@
   "author": "Cyber Cloud",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www",
-    "build": "mkdir dist && babel src -s -d dist"
+    "start": "nodemon ./bin/www"
   },
   "dependencies": {
     "@types/passport-google-oauth20": "^2.0.11",
-    "axios": "^1.2.2",
     "cookie-parser": "^1.4.6",
     "debug": "^4.3.4",
     "dotenv": "^16.0.3",
@@ -17,7 +15,6 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "http-errors": "^2.0.0",
-    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.0",
