--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Cyber Cloud",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "@types/passport-google-oauth20": "^2.0.11",
